Bug 502704 - Default value of the length of minor ticks are very small and "Save Default" doesn't work to change the default value
Summary: Default value of the length of minor ticks are very small and "Save Default" ...
Status: RESOLVED FIXED
Alias: None
Product: LabPlot2
Classification: Applications
Component: frontend (other bugs)
Version First Reported In: 2.11.1
Platform: Microsoft Windows Microsoft Windows
: NOR minor
Target Milestone: ---
Assignee: Alexander Semke
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-04-12 11:34 UTC by Yoshinobu Shimamura
Modified: 2025-04-17 23:31 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.12
Sentry Crash Report:


Attachments
Properties of Minor Thicks in Ticks tab in Property Explorer (7.70 KB, image/png)
2025-04-12 11:34 UTC, Yoshinobu Shimamura
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Yoshinobu Shimamura 2025-04-12 11:34:22 UTC
Created attachment 180194 [details]
Properties of Minor Thicks in Ticks tab in Property Explorer

***
If you're not sure this is actually a bug, instead post about it at https://discuss.kde.org

If you're reporting a crash, attach a backtrace with debug symbols; see https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports

Please remove this comment after reading and before submitting - thanks!
***

SUMMARY
Default value of the length of minor ticks are very small and "Save Default" doesn't work to change the default value.

STEPS TO REPRODUCE
1.  Everytime I make a x-y plot, the default value of minot ticks of all axes are very small, and "Save Default" doesn't work to change the default value.

OBSERVED RESULT

EXPECTED RESULT

SOFTWARE/OS VERSIONS
Windows: Windows 11 Home 24H2

ADDITIONAL INFORMATION
Comment 1 Alexander Semke 2025-04-17 18:05:09 UTC
Git commit e14aca001092d4226733848e12320280abf6fe6d by Alexander Semke.
Committed on 17/04/2025 at 17:45.
Pushed by asemke into branch 'master'.

[worksheet] correctly calculate the lengh of the minor axis ticks when
saving the properties as a temlate.
FIXED-IN: 2.12

M  +1    -0    ChangeLog
M  +1    -1    src/frontend/dockwidgets/AxisDock.cpp

https://invent.kde.org/education/labplot/-/commit/e14aca001092d4226733848e12320280abf6fe6d
Comment 2 Alexander Semke 2025-04-17 18:08:16 UTC
(In reply to Yoshinobu Shimamura from comment #0)
> Created attachment 180194 [details]
> Properties of Minor Thicks in Ticks tab in Property Explorer
> 
> ***
> If you're not sure this is actually a bug, instead post about it at
> https://discuss.kde.org
> 
> If you're reporting a crash, attach a backtrace with debug symbols; see
> https://community.kde.org/Guidelines_and_HOWTOs/Debugging/
> How_to_create_useful_crash_reports
> 
> Please remove this comment after reading and before submitting - thanks!
> ***
> 
> SUMMARY
> Default value of the length of minor ticks are very small and "Save Default"
> doesn't work to change the default value.

The default value for the length of the minor ticks is 3pt. Saving a custom value as a template was wrong for this property which we fixed now. Thank you for reporting this issue. If this feature is critical for you, please consider using our development version until we released 2.12.
Comment 3 Yoshinobu Shimamura 2025-04-17 23:31:59 UTC
Thank you for your reply and quick response to correct the bug. Thanks!