[worksheet] correctly calculate the lengh of the minor axis ticks when saving the properties as a temlate.

BUG: 502704
FIXED-IN: 2.12